--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -2,7 +2,7 @@
 
 <h3>Edit Task </h3>
 <div class="row">
-	<form action="{{url_for('insert_task')}}" method="POST" class="col s12">
+	<form action="{{ url_for('update_task', task_id=task._id) }}" method="POST" class="col s12">
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">poll</i>
@@ -22,14 +22,14 @@
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">assignment</i>
-				<input id="task_name" name="task_name" type="text" class="validate">
+				<input id="task_name" name="task_name" type="text" class="validate" value="{{task.task_name}}">
 				<label for="icon_prefix">Task Name</label>
 			</div>
 		</div>
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">subject</i>
-				<textarea  name="task_description" id="task_description" class="materialize-textarea"></textarea>
+				<textarea  name="task_description" id="task_description" class="materialize-textarea">{{task.task_description}}</textarea>
 				<label for="icon_telephone">Task Description</label>
 			</div>
 		</div>
@@ -43,22 +43,34 @@
 		<div class="row">
 			<div class="switch">
 				<label>
+                    {% if task.is_urgent %}
+                    <input id="is_urgent" name="is_urgent" type="checkbox" checked>
+                    {% else %}
                     <input id="is_urgent" name="is_urgent" type="checkbox">
+                    {% endif %}
                     <span class="lever"></span>
                     Is Urgent!
                 </label>
 			</div>
 		</div>
 		<div class="row">
-			<button class="btn waves-effect waves-light" type="submit" name="action">Add Task
+			<button class="btn waves-effect waves-light" type="submit" name="action">Edit Task
             <i class="material-icons right">playlist_add</i>
             </button>
         </div>    
 	</form>
 </div>
+<script src="https://code.jquery.com/jquery-3.4.1.js"
+		integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script>
 	document.getElementById("matfix").addEventListener("click", function(e) {
 	        e.stopPropagation();
         });
+</script>        
+<script type="text/javascript">
+    $(document).ready(function(){
+        due_date = Date.parse('{{task.due_date}}');
+        $('#due_date').pickadate('picker').set('select', due_date, {format: 'dd/mm/yyyy'}).trigger('change')
+    });
 </script>
 {% endblock %}
