--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -6,10 +6,14 @@
 	{% for task in tasks %}
 	<li>
 		<div class="collapsible-header">
-			<div class='col s3'>
-				<i class="material-icons">expand_more</i>
-                <a  class="waves-effect waves-light btn btn_small">Done</a>
+        <div class="col s1">
+            <i class="material-icons">expand_more</i>
+        </div>
+			<div class='col s2'>
+				<div class='inline_actions'>
+                <a href="{{url_for('delete_task', task_id=task._id)}}" class="waves-effect waves-light btn btn_small">Done</a>
                 <a href="{{url_for('edit_task', task_id=task._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
+				</div>
 			</div>
 			<div class='col s9 task_header'>
 				<strong>{{task.task_name}}</strong> - {{task.due_date}}
