--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,32 @@
 <head>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
+	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
 </head>
 
 <body>
+	<header>
+		<nav>
+			<div class="nav-wrapper">
+				<a href="{{url_for('get_tasks')}}" class="brand-logo">Tasks Manager</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+				<ul id="nav-mobile" class="right hide-on-med-and-down">
+					<li><a href="{{url_for('get_tasks')}}">Home</a></li>
+					<li><a href="{{url_for('add_task')}}">New Task</a></li>
+					<li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+				</ul>
+				<ul class="side-nav" id="mobile-demo">
+					<li><a href="{{url_for('get_tasks')}}">Home</a></li>
+					<li><a href="{{url_for('add_task')}}">New Task</a></li>
+					<li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
-    <div class="container">
-	{% block content %} {% endblock %}
-    </div>
+	<div class="container">
+		{% block content %} {% endblock %}
+	</div>
 	<script src="https://code.jquery.com/jquery-3.4.1.js"
 		integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
@@ -19,6 +37,7 @@
 		$(document).ready(function(){
             $('.collapsible').collapsible();
             $('select').material_select();
+            $(".button-collapse").sideNav();
          });
 	</script>
 
